--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ h1,h2,p{
     text-align: center;
 }
 body{
+    font-family: sans-serif;
+    padding: 20px;
     background-image: url(download.jfif);
 }
 
@@ -12,6 +14,7 @@ body{
     margin-left: auto;
     padding: 20px;
     max-width: 500px;
+   
 }
 .flavor, .dessert{
     text-align: center;
@@ -23,5 +26,62 @@ body{
 }
 .item p{
     display: inline-block;
+    margin-bottom: 5px;
+    margin-top: 5px;
+    font-size: 18px;
+}
+.bottom-line{
+    margin-top: 25px;
+}
+h1, h2{
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+.established{
+    font-style: italic;
+}
+h1{
+    font-size: 40px;
+    margin-top:0;
+    margin-bottom: 15px;
+}
+.address{
+    margin-bottom: 5px;
+}
+h2{
+    font-size: 30px;
+}
+hr{
+    height:2px;
+    background-color: brown;
+    border-color: brown;
+}
+footer{
+    font-size: 14px;
+}
+a{
+    color:black;
+}
+a:visited{
+    color:black;
+}
+a:hover{
+    color:brown;
+}
+a:active{
+    color:brown;
+}
+img{
+    margin-left: auto;
+    margin-right:auto;
+    display: block;
+    margin-top:-25px;
+}
+.small-img {
+    width: 80px;
+    height: auto; 
+}
+.small-image{
+    width:80px;
+    height:auto;
 }
 /* Add more styles as needed */
